# d361api

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  DEVELOPMENT.md  FINAL_SETUP_GUIDE.md  GITHUB_ACTIONS_SETUP.md  LICENSE  Makefile  PLAN.md  README.md  SETUP_COMPLETE.md  TODO.md  commit_without_workflows.sh  d361api.sh  d361api.yaml  git_push.sh  llms.sh  llms.txt  publish.sh  pyproject.toml  pyproject2.toml  requirements.txt  setup.py  stuby.py  swagger.json  test_basic_setup.py  test_setup.py  tox.ini
.github/workflows/: push.yml  python.yml  release.yml
.openapi-generator/: FILES
d361api/: __init__.py  __version__.py  api_client.py  cli.py  configuration.py  exceptions.py  rest.py
d361api/d361api/: __init__.py  access_scope_customer_v2.py  access_scope_level.py  add_category_request.py  add_category_response.py  add_media_file_response_customer.py  add_media_folder_request_customer.py  add_reader_group_request_v2.py  add_reader_request_v2.py  add_team_account_customer.py  add_update_access_scope_customer_v2.py  add_user_data.py  add_user_data_customer_api_response.py  ai_additional_feedback_info.py  ai_assistive_search.py  ai_assistive_search_request.py  all_files_with_count_customer.py  all_files_with_count_response_customer.py  api_definition_inforamtion_customer.py  api_docs_import_data_customer.py  api_docs_resync_data_customer.py  api_documentation_import_response_customer.py  api_documentation_resync_response_customer.py  api_error_and_warnings_data.py  api_logs.py  api_reference_logs_data_customer.py  api_reference_logs_wrap_response_customer.py  api_reference_publish_request_customer.py  api_references_api.py  article_access_info.py  article_content_type.py  article_matched_data.py  article_setting_customer.py  article_setting_customer_response.py  article_simple_data_customer.py  article_simple_data_customer_response.py  article_simple_version_customer.py  article_stale_status.py  article_status_customer.py  article_status_indicator.py  (+189 more)
d361api/models/: __init__.py  access_scope_customer_v2.py  access_scope_level.py  add_category_request.py  add_category_response.py  add_media_file_response_customer.py  add_media_folder_request_customer.py  add_reader_group_request_v2.py  add_reader_request_v2.py  add_team_account_customer.py  add_update_access_scope_customer_v2.py  add_user_data.py  add_user_data_customer_api_response.py  ai_additional_feedback_info.py  ai_assistive_search.py  ai_assistive_search_request.py  all_files_with_count_customer.py  all_files_with_count_response_customer.py  api_definition_inforamtion_customer.py  api_docs_import_data_customer.py  api_docs_resync_data_customer.py  api_documentation_import_response_customer.py  api_documentation_resync_response_customer.py  api_error_and_warnings_data.py  api_logs.py  api_reference_logs_data_customer.py  api_reference_logs_wrap_response_customer.py  api_reference_publish_request_customer.py  article_access_info.py  article_content_type.py  article_matched_data.py  article_setting_customer.py  article_setting_customer_response.py  article_simple_data_customer.py  article_simple_data_customer_response.py  article_simple_version_customer.py  article_stale_status.py  article_status_customer.py  article_status_indicator.py  article_type.py  (+179 more)
docs/: AIAdditionalFeedbackInfo.md  AIAssistiveSearch.md  AIAssistiveSearchRequest.md  APIReferencesApi.md  AccessScopeCustomerV2.md  AccessScopeLevel.md  AddCategoryRequest.md  AddCategoryResponse.md  AddMediaFileResponseCustomer.md  AddMediaFolderRequestCustomer.md  AddReaderGroupRequestV2.md  AddReaderRequestV2.md  AddTeamAccountCustomer.md  AddUpdateAccessScopeCustomerV2.md  AddUserData.md  AddUserDataCustomerApiResponse.md  AllFilesWithCountCustomer.md  AllFilesWithCountResponseCustomer.md  ApiDefinitionInforamtionCustomer.md  ApiDocsImportDataCustomer.md  ApiDocsResyncDataCustomer.md  ApiDocumentationImportResponseCustomer.md  ApiDocumentationResyncResponseCustomer.md  ApiErrorAndWarningsData.md  ApiLogs.md  ApiReferenceLogsDataCustomer.md  ApiReferenceLogsWrapResponseCustomer.md  ApiReferencePublishRequestCustomer.md  ArticleAccessInfo.md  ArticleContentType.md  ArticleMatchedData.md  ArticleSettingCustomer.md  ArticleSettingCustomerResponse.md  ArticleSimpleDataCustomer.md  ArticleSimpleDataCustomerResponse.md  ArticleSimpleVersionCustomer.md  ArticleStaleStatus.md  ArticleStatusCustomer.md  ArticleStatusIndicator.md  ArticleType.md  (+189 more)
scripts/: build.sh  dev-setup.sh  release.sh  test.sh
src/d361api/: d361api.py
test/: conftest.py  test_access_scope_customer_v2.py  test_access_scope_level.py  test_add_category_request.py  test_add_category_response.py  test_add_media_file_response_customer.py  test_add_media_folder_request_customer.py  test_add_reader_group_request_v2.py  test_add_reader_request_v2.py  test_add_team_account_customer.py  test_add_update_access_scope_customer_v2.py  test_add_user_data.py  test_add_user_data_customer_api_response.py  test_ai_additional_feedback_info.py  test_ai_assistive_search.py  test_ai_assistive_search_request.py  test_all_files_with_count_customer.py  test_all_files_with_count_response_customer.py  test_api_client.py  test_api_definition_inforamtion_customer.py  test_api_docs_import_data_customer.py  test_api_docs_resync_data_customer.py  test_api_documentation_import_response_customer.py  test_api_documentation_resync_response_customer.py  test_api_error_and_warnings_data.py  test_api_logs.py  test_api_reference_logs_data_customer.py  test_api_reference_logs_wrap_response_customer.py  test_api_reference_publish_request_customer.py  test_api_references_api.py  test_apis.py  test_article_access_info.py  test_article_content_type.py  test_article_matched_data.py  test_article_setting_customer.py  test_article_setting_customer_response.py  test_article_simple_data_customer.py  test_article_simple_data_customer_response.py  test_article_simple_version_customer.py  test_article_stale_status.py  (+195 more)
tests/: test_package.py
